--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Grandstander:wght@500&display=swap');
 
-
+*{
+    scroll-behavior: smooth;
+}
 
 
 body {
