--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Grandstander:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Grandstander:wght@500&display=swap");
 
-
-
+.faqs h2:hover {
+    background-color: rgb(27, 26, 26);
+}
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     background: url("./hack.png");
     position: relative;
 }
@@ -103,8 +104,7 @@ nav ul li a:hover {
     transform: rotate(45deg) translate(-7px, -8px);
 }
 
-
-@media screen and (min-width:690px) {
+@media screen and (min-width: 690px) {
     nav {
         display: flex;
         align-items: baseline;
@@ -133,7 +133,6 @@ nav ul li a:hover {
 
     nav ul a {
         text-align: center;
-
     }
 
     nav ul a:hover {
@@ -149,8 +148,7 @@ nav ul li a:hover {
 
 #banner {
     background:
-        /* linear-gradient(rgba(32, 32, 96, 0.7), rgba(32, 32, 96, 0.7)), */
-        url("./hack.png");
+        /* linear-gradient(rgba(32, 32, 96, 0.7), rgba(32, 32, 96, 0.7)), */ url("./hack.png");
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
@@ -200,7 +198,6 @@ nav ul li a:hover {
     cursor: pointer;
     border: 3px solid #b030b0;
     transition: background 3s ease, border 0.5s ease;
-
 }
 
 #banner-box a:hover {
@@ -225,7 +222,6 @@ nav ul li a:hover {
     width: 50px;
     border: 3px solid #b030b0;
     transition: width 4s ease, border 4s ease;
-
 }
 
 .title:hover .title-underline {
@@ -281,61 +277,57 @@ nav ul li a:hover {
     }
 }
 
-
 /* Details */
 
-   .numbers{
+.numbers {
     padding: 3rem 0;
-    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('./time.jpeg')center/cover no-repeat fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+        url("./time.jpeg") center/cover no-repeat fixed;
     color: #fff;
-   }
+}
 
-   .numbers-center{
+.numbers-center {
     max-width: 95vw;
-   margin: 2rem auto;
-   }
-   .detail-number{
+    margin: 2rem auto;
+}
+.detail-number {
     text-align: center;
     margin: 2rem 0;
-   }
-   .detail-number-icon{
+}
+.detail-number-icon {
     font-size: 3rem;
-   }
-   .detail-number-text{
+}
+.detail-number-text {
     font-size: 2rem;
     letter-spacing: 0.5rem;
     margin: 0.5rem 0;
-   }
-   .detail-number-title{
+}
+.detail-number-title {
     text-transform: uppercase;
     letter-spacing: 0.25rem;
-   }
-   
-   @media screen and (min-width:576px){
-    .numbers-center{
-     display: flex;
-     flex-wrap: wrap;
-     justify-content: space-between;
-    }
-    .detail-number{
-     flex:0 0 calc(50% - 0.5rem) 
-    }
-   }
-   @media screen and (min-width:992px){
-    
-    .detail-number{
-     flex:0 0 calc(25% - 0.5rem) 
-    }
-   }
-   
+}
 
-
+@media screen and (min-width: 576px) {
+    .numbers-center {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .detail-number {
+        flex: 0 0 calc(50% - 0.5rem);
+    }
+}
+@media screen and (min-width: 992px) {
+    .detail-number {
+        flex: 0 0 calc(25% - 0.5rem);
+    }
+}
 
 .card {
     display: grid;
     grid-template-columns: 300px;
     grid-template-rows: 210px 210px 80px;
-    grid-template-areas: "image""text""stats";
+    grid-template-areas: "image" "text" "stats";
     position: relative;
     border-radius: 18px;
     background: whitesmoke;
@@ -357,7 +349,6 @@ nav ul li a:hover {
     right: 25%;
     bottom: 70px;
 }
-
 
 .card-text {
     grid-area: text;
@@ -409,7 +400,6 @@ nav ul li a:hover {
     background: rgb(255 4 151);
 }
 
-
 .card:hover {
     transform: scale(1.15);
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
@@ -451,93 +441,85 @@ nav ul li a:hover {
     text-shadow: 3px 2px 10px;
 }
 
-<!-- Footer contact us  -->
- .footer{
+<!-- Footer contact us -- > .footer {
     height: 20%;
-    background-color:#b030b0;
-  }
-  .contact-img{
+    background-color: #b030b0;
+}
+.contact-img {
     display: inline;
     padding-top: 3px;
     padding-bottom: 6px;
     height: 35px;
     width: 35px;
-    margin:6px;
+    margin: 6px;
     animation: bttn 5s ease-in-out 1;
-  }
-  .contact-text{
+}
+.contact-text {
     font-family: sans-serif;
     font-weight: normal;
     color: white;
     font-size: 12px;
     padding: 6px 0px 6px 0px;
-    margin:10px;
+    margin: 10px;
     text-align: center;
-  }
+}
 
+.about0,
+.about1,
+.about2,
+.about3 {
+    margin: 50px 100px;
+    text-align: center;
+    color: white;
+    font-family: "Roboto", sans-serif;
+    font-size: 28px;
+    font-family: "Aclonica";
+    height: auto;
+    width: auto;
+    border-top-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    background-color: #b030b0;
+    padding: 50px;
+    box-shadow: 20px 20px white;
+    z-index: -1;
+}
 
-  .about0,.about1,.about2,.about3{
-    margin:50px 100px;
-     text-align:center;
-     color:white;
-     font-family: 'Roboto', sans-serif;
-     font-size:28px;
-     font-family:'Aclonica';
-     height:auto;
-     width:auto;
-     border-top-left-radius: 30px;
-     border-bottom-right-radius: 30px;
-     background-color:#b030b0;
-     padding:50px;
-     box-shadow: 20px 20px white;
-     z-index:-1;
-   
-   }
-   
-   .about0 > p{
-     animation:fadeInUp;
-     animation-duration:3s;
-     animation-iteration-count: 1;
-     animation-delay: 0s;
-     
-     
-   }
-   .about1 > p{
-     animation:fadeInUp;
-     animation-duration:3s;
-     animation-iteration-count: 1;
-     animation-delay: 2s;
-     
-   }
-   .about2 > p{
-     animation:fadeInUp;
-     animation-duration:3s;
-     animation-iteration-count: 1;
-     animation-delay: 4s;
-    
-   }
-   .about3 > p{
-     animation:fadeInUp;
-     animation-duration:3s;
-     animation-iteration-count: 1;
-     animation-delay: 6s;
-     
-   }
-   .about{
-     font-size:3.5em;
-     color:white;
-     margin-top:150px;
-     font-weight:bold;
-     text-align:center;
-     z-index: -1;
-   }
-   .about .line{
-     display:inline-block;
-     line-height:1em;
-     
-   }
-   .pullreq{
-     color:pink;
-   }
-
-   
+.about0 > p {
+    animation: fadeInUp;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-delay: 0s;
+}
+.about1 > p {
+    animation: fadeInUp;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-delay: 2s;
+}
+.about2 > p {
+    animation: fadeInUp;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-delay: 4s;
+}
+.about3 > p {
+    animation: fadeInUp;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-delay: 6s;
+}
+.about {
+    font-size: 3.5em;
+    color: white;
+    margin-top: 150px;
+    font-weight: bold;
+    text-align: center;
+    z-index: -1;
+}
+.about .line {
+    display: inline-block;
+    line-height: 1em;
+}
+.pullreq {
+    color: pink;
+}
