--- a/styles.css
+++ b/styles.css
@@ -451,7 +451,7 @@ nav ul li a:hover {
     text-shadow: 3px 2px 10px;
 }
 
-<!-- Footer contact us  -->
+/* <!-- Footer contact us  --> */
  .footer{
     height: 20%;
     background-color:#b030b0;
