--- a/styles.css
+++ b/styles.css
@@ -533,3 +533,17 @@ nav ul li a:hover {
    }
 
    
+   /* Countdown styling */
+   
+  .li-countdown {
+    display: inline-block;
+    font-size: 1.5em;
+    list-style-type: none;
+    padding: 1em;
+    text-transform: uppercase;
+  }
+  
+  .li-countdown span {
+    display: block;
+    font-size: 4.5rem;
+  }
