added a countdown of remaining time for completing Hacktoberfest

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Grandstander:wght@500&display=swap');
-
-
-
-
 body {
     font-family: 'Roboto', sans-serif;
     background: url("./hack.png");
@@ -82,9 +78,7 @@ nav ul li a:hover {
     align-self: center;
 }
 
-.bar1,
-.bar2,
-.bar3 {
+.bar1, .bar2, .bar3 {
     height: 5px;
     width: 35px;
     background-color: #b030b0;
@@ -104,7 +98,6 @@ nav ul li a:hover {
     transform: rotate(45deg) translate(-7px, -8px);
 }
 
-
 @media screen and (min-width:690px) {
     nav {
         display: flex;
@@ -112,35 +105,27 @@ nav ul li a:hover {
         flex-wrap: wrap;
         padding: 0 20px;
     }
-
     #menu-btn {
         display: none;
     }
-
     nav ul {
         flex: 1 1 auto;
         display: flex !important;
         /*    important*/
         flex-wrap: wrap;
     }
-
     nav ul li {
         flex: 1 0 125px;
     }
-
     nav ul .icon {
         flex: 0 0 20px;
     }
-
     nav ul a {
         text-align: center;
-
     }
-
     nav ul a:hover {
         padding: 10px !important;
     }
-
     #nav-top {
         padding: 10px;
     }
@@ -149,9 +134,8 @@ nav ul li a:hover {
 /*###############Banner################*/
 
 #banner {
-    background:
-        /* linear-gradient(rgba(32, 32, 96, 0.7), rgba(32, 32, 96, 0.7)), */
-        url("./hack.png");
+    background: /* linear-gradient(rgba(32, 32, 96, 0.7), rgba(32, 32, 96, 0.7)), */
+    url("./hack.png");
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
@@ -186,8 +170,7 @@ nav ul li a:hover {
     animation: slideLeft 5s ease-in-out 1;
 }
 
-.banner-btn,
-.banner-underline {
+.banner-btn, .banner-underline {
     animation: bttn 3s ease-in-out 1;
 }
 
@@ -202,7 +185,6 @@ nav ul li a:hover {
     cursor: pointer;
     border: 3px solid #b030b0;
     transition: background 3s ease, border 0.5s ease;
-
 }
 
 #banner-box a:hover {
@@ -227,7 +209,6 @@ nav ul li a:hover {
     width: 50px;
     border: 3px solid #b030b0;
     transition: width 4s ease, border 4s ease;
-
 }
 
 .title:hover .title-underline {
@@ -240,7 +221,6 @@ nav ul li a:hover {
         transform: scale(2);
         opacity: 0;
     }
-
     100% {
         transform: scale(1);
         opacity: 1;
@@ -251,15 +231,12 @@ nav ul li a:hover {
     0% {
         transform: translateX(1000px);
     }
-
     50% {
         transform: translateX(-200px);
     }
-
     75% {
         transform: translateX(50px);
     }
-
     100% {
         transform: translateX(0px);
     }
@@ -269,69 +246,66 @@ nav ul li a:hover {
     0% {
         transform: translateX(-1000px);
     }
-
     50% {
         transform: translateX(200px);
     }
-
     75% {
         transform: translateX(-50px);
     }
-
     100% {
         transform: translateX(0px);
     }
 }
 
-
 /* Details */
 
-   .numbers{
+.numbers {
     padding: 3rem 0;
-    background: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url('./time.jpeg')center/cover no-repeat fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('./time.jpeg')center/cover no-repeat fixed;
     color: #fff;
-   }
+}
 
-   .numbers-center{
+.numbers-center {
     max-width: 95vw;
-   margin: 2rem auto;
-   }
-   .detail-number{
+    margin: 2rem auto;
+}
+
+.detail-number {
     text-align: center;
     margin: 2rem 0;
-   }
-   .detail-number-icon{
+}
+
+.detail-number-icon {
     font-size: 3rem;
-   }
-   .detail-number-text{
+}
+
+.detail-number-text {
     font-size: 2rem;
     letter-spacing: 0.5rem;
     margin: 0.5rem 0;
-   }
-   .detail-number-title{
+}
+
+.detail-number-title {
     text-transform: uppercase;
     letter-spacing: 0.25rem;
-   }
-   
-   @media screen and (min-width:576px){
-    .numbers-center{
-     display: flex;
-     flex-wrap: wrap;
-     justify-content: space-between;
-    }
-    .detail-number{
-     flex:0 0 calc(50% - 0.5rem) 
-    }
-   }
-   @media screen and (min-width:992px){
-    
-    .detail-number{
-     flex:0 0 calc(25% - 0.5rem) 
-    }
-   }
-   
+}
 
+@media screen and (min-width:576px) {
+    .numbers-center {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .detail-number {
+        flex: 0 0 calc(50% - 0.5rem)
+    }
+}
 
+@media screen and (min-width:992px) {
+    .detail-number {
+        flex: 0 0 calc(25% - 0.5rem)
+    }
+}
 
 .card {
     display: grid;
@@ -358,7 +332,6 @@ nav ul li a:hover {
     align-items: center;
     justify-content: center;
 }
-
 
 .card-text {
     grid-area: text;
@@ -403,7 +376,6 @@ nav ul li a:hover {
     background: rgb(255 4 151);
 }
 
-
 .card:hover {
     transform: scale(1.15);
     box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
@@ -443,93 +415,152 @@ nav ul li a:hover {
     transform: scale(10);
 }
 
-<!-- Footer contact us  -->
- .footer{
+<!-- Footer contact us -->.footer {
     height: 20%;
-    background-color:#b030b0;
-  }
-  .contact-img{
+    background-color: #b030b0;
+}
+
+.contact-img {
     display: inline;
     padding-top: 3px;
     padding-bottom: 6px;
     height: 35px;
     width: 35px;
-    margin:6px;
+    margin: 6px;
     animation: bttn 5s ease-in-out 1;
-  }
-  .contact-text{
+}
+
+.contact-text {
     font-family: sans-serif;
     font-weight: normal;
     color: white;
     font-size: 12px;
     padding: 6px 0px 6px 0px;
-    margin:10px;
+    margin: 10px;
     text-align: center;
-  }
+}
 
+.about0, .about1, .about2, .about3 {
+    margin: 50px 100px;
+    text-align: center;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    font-family: 'Aclonica';
+    height: auto;
+    width: auto;
+    border-top-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    background-color: #b030b0;
+    padding: 50px;
+    box-shadow: 20px 20px white;
+    z-index: -1;
+}
 
-  .about0,.about1,.about2,.about3{
-    margin:50px 100px;
-     text-align:center;
-     color:white;
-     font-family: 'Roboto', sans-serif;
-     font-size:28px;
-     font-family:'Aclonica';
-     height:auto;
-     width:auto;
-     border-top-left-radius: 30px;
-     border-bottom-right-radius: 30px;
-     background-color:#b030b0;
-     padding:50px;
-     box-shadow: 20px 20px white;
-     z-index:-1;
-   
-   }
-   
-   .about0 > p{
-     animation:fadeInUp;
-     animation-duration:3s;
-     animation-iteration-count: 1;
-     animation-delay: 0s;
-     
-     
-   }
-   .about1 > p{
-     animation:fadeInUp;
-     animation-duration:3s;
-     animation-iteration-count: 1;
-     animation-delay: 2s;
-     
-   }
-   .about2 > p{
-     animation:fadeInUp;
-     animation-duration:3s;
-     animation-iteration-count: 1;
-     animation-delay: 4s;
-    
-   }
-   .about3 > p{
-     animation:fadeInUp;
-     animation-duration:3s;
-     animation-iteration-count: 1;
-     animation-delay: 6s;
-     
-   }
-   .about{
-     font-size:3.5em;
-     color:white;
-     margin-top:150px;
-     font-weight:bold;
-     text-align:center;
-     z-index: -1;
-   }
-   .about .line{
-     display:inline-block;
-     line-height:1em;
-     
-   }
-   .pullreq{
-     color:pink;
-   }
+.about0>p {
+    animation: fadeInUp;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-delay: 0s;
+}
 
-   
+.about1>p {
+    animation: fadeInUp;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-delay: 2s;
+}
+
+.about2>p {
+    animation: fadeInUp;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-delay: 4s;
+}
+
+.about3>p {
+    animation: fadeInUp;
+    animation-duration: 3s;
+    animation-iteration-count: 1;
+    animation-delay: 6s;
+}
+
+.about {
+    font-size: 3.5em;
+    color: white;
+    margin-top: 150px;
+    font-weight: bold;
+    text-align: center;
+    z-index: -1;
+}
+
+.about .line {
+    display: inline-block;
+    line-height: 1em;
+}
+
+.pullreq {
+    color: pink;
+}
+
+/* Countdown */
+
+.countdown {
+    margin-top: 50px;
+}
+
+.countdown h1 {
+    text-align: center;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+ul#countdown {
+    text-align: center;
+}
+
+ul#countdown li {
+    color: #fff;
+    display: inline-block;
+    margin-right: 18px;
+    width: 200px;
+    height: 200px;
+    text-align: center;
+    line-height: 25px;
+    background-repeat: no-repeat;
+    background-position: left top;
+    background-color: #B030B0;
+    transition: 0.5s ease;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+ul#countdown li:hover {
+    background-color: rgb(255, 7, 110);
+    transform: scale(1.15);
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
+}
+
+.center {
+    padding: 70px 0;
+    text-align: center;
+}
+
+ul#countdown li span {
+    margin: auto;
+    font-size: 40px;
+    font-weight: 300;
+    color: #fff;
+    position: relative;
+    text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+    line-height: 55px;
+}
+
+ul#countdown li p.timeRefDays, ul#countdown li p.timeRefHours, ul#countdown li p.timeRefMinutes, ul#countdown li p.timeRefSeconds {
+    text-shadow: 1px 1px 2px rgba(150, 150, 150, 1);
+    text-transform: capitalize;
+    text-align: center;
+    font-size: 24px;
+    padding-right: 10px;
+    line-height: 1px;
+}
