--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Grandstander:wght@500&display=swap');
 
 
+html {
+    scroll-behavior: smooth;
+}
 
-
+body{
+    scroll-behavior: smooth;
+}
 body {
     font-family: 'Roboto', sans-serif;
     background: url("./hack.png");
