--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,9 @@
 }
 
 body {
+  padding-bottom: 20%;
   font-family: "Roboto", sans-serif;
-  background: url("./hack.png");
+  background-color: #082742;
   position: relative;
   padding-bottom: var(--footer-height);
 }
@@ -21,8 +22,9 @@ body {
 
 nav {
   text-transform: uppercase;
+  padding-bottom: 10%;
   flex: 0 0 auto;
-  padding: 10px 0;
+  padding: 2px 0;
   position: fixed;
   width: 100%;
   background: #202040;
@@ -151,8 +153,8 @@ nav ul li a:hover {
 /*###############Banner################*/
 
 #banner {
-  background:
-        /* linear-gradient(rgba(32, 32, 96, 0.7), rgba(32, 32, 96, 0.7)), */ url("./hack.png");
+  background-color:#082742;
+        /* linear-gradient(rgba(32, 32, 96, 0.7), rgba(32, 32, 96, 0.7)), */ /*url("./img/hack.png");*/
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
@@ -161,7 +163,9 @@ nav ul li a:hover {
   align-items: center;
   justify-content: center;
 }
-
+.favicon{
+  margin-top:-30%;
+}
 #banner-box {
   color: #f5f5f5;
   text-align: center;
@@ -288,7 +292,7 @@ nav ul li a:hover {
 .numbers {
   padding: 3rem 0;
   background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("./time.jpeg") center/cover no-repeat fixed;
+    url("./img/time.jpeg") center/cover no-repeat fixed;
   color: #fff;
 }
 
@@ -554,7 +558,7 @@ footer {
   font-size: 4.5rem;
 }
 #skill-lang {
-  background: url(hack.png) no-repeat center center fixed;
+  background: url(./img/hack.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
