--- a/styles.css
+++ b/styles.css
@@ -456,12 +456,12 @@ footer {
 }
 
 .contact-img {
-  display: inline;
+  display: inline-block;
   padding-top: 3px;
   padding-bottom: 6px;
   height: 35px;
-  width: 35px;
-  margin: 6px;
+  width: 35x;
+  margin: 5px;
   animation: bttn 5s ease-in-out 1;
 }
 .contact-text {
@@ -472,6 +472,35 @@ footer {
   padding: 6px 0px 6px 0px;
   margin: 10px;
   text-align: center;
+}
+/*for the about us*/
+/* .blurr{
+  filter: blur(2px);
+  background-color: red;
+  height: 300px;
+} */
+.border{
+  margin: 150px;
+  backdrop-filter: blur(2px);
+}
+
+.contact-text1 {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 300;
+  color: white;
+  font-size: 35px;
+  padding: 6px 0px 6px 0px;
+  margin: 10px;
+  text-align: center;
+}
+.contact-img1 {
+  display: inline-block;
+  padding-top: 3px;
+  padding-bottom: 6px;
+  height: 50px;
+  width: 50x;
+  margin: 8px;
+  animation: bttn 1.5s ease-in-out 1;
 }
 /* about css */
 
